@startuml
' CatchUp Platform Class Diagram (synced with current codebase)

skinparam classAttributeIconSize 0

package "News" {

  package "Interfaces.REST" {
    class FavoriteSourcesController {
      +CreateFavoriteSource(CreateFavoriteSourceResource) : Task<ActionResult>
      +GetFavoriteSourceFromQuery(string, string) : Task<ActionResult>
      +GetFavoriteSourceById(int) : Task<ActionResult>
    }

    package "Resources" {
      class FavoriteSourceResource <<resource>> {
        +int Id
        +string NewsApiKey
        +string SourceId
      }
      class CreateFavoriteSourceResource <<resource>> {
        +string NewsApiKey
        +string SourceId
      }
    }

    package "Transform" {
      class FavoriteSourceResourceFromEntityAssembler <<assembler>> {
        +ToResourceFromEntity(FavoriteSource) : FavoriteSourceResource
      }
      class CreateFavoriteSourceCommandFromResourceAssembler <<assembler>> {
        +ToCommandFromResource(CreateFavoriteSourceResource) : CreateFavoriteSourceCommand
      }
    }
  }

  package "Domain.Model.Aggregates" {
    class FavoriteSource <<aggregate>> {
      +int Id
      +string NewsApiKey
      +string SourceId
      +DateTimeOffset? CreatedDate
      +DateTimeOffset? UpdatedDate
      +FavoriteSource(CreateFavoriteSourceCommand)
    }
  }

  package "Domain.Model.Commands" {
    class CreateFavoriteSourceCommand <<command>> {
      +string NewsApiKey
      +string SourceId
    }
  }

  package "Domain.Model.Queries" {
    class GetAllFavoriteSourcesByNewsApiKeyQuery <<query>> {
      +string NewsApiKey
    }
    class GetFavoriteSourceByIdQuery <<query>> {
      +int Id
    }
    class GetFavoriteSourceByNewsApiKeyAndSourceIdQuery <<query>> {
      +string NewsApiKey
      +string SourceId
    }
  }

  package "Domain.Services" {
    interface IFavoriteSourceCommandService <<domain-service>> {
      +Handle(CreateFavoriteSourceCommand) : Task<FavoriteSource?>
    }
    interface IFavoriteSourceQueryService <<domain-service>> {
      +Handle(GetAllFavoriteSourcesByNewsApiKeyQuery) : Task<IEnumerable<FavoriteSource>>
      +Handle(GetFavoriteSourceByIdQuery) : Task<FavoriteSource?>
      +Handle(GetFavoriteSourceByNewsApiKeyAndSourceIdQuery) : Task<FavoriteSource?>
    }
  }

  package "Domain.Repositories" {
    interface IFavoriteSourceRepository <<repository>> {
      +FindByNewsApiKeyAsync(string) : Task<IEnumerable<FavoriteSource>>
      +FindByNewsApiKeyAndSourceIdAsync(string, string) : Task<FavoriteSource?>
    }
  }

  package "Application.Internal.CommandServices" {
    class FavoriteSourceCommandService <<service>> {
      +Handle(CreateFavoriteSourceCommand) : Task<FavoriteSource?>
    }
  }

  package "Application.Internal.QueryServices" {
    class FavoriteSourceQueryService <<service>> {
      +Handle(GetAllFavoriteSourcesByNewsApiKeyQuery) : Task<IEnumerable<FavoriteSource>>
      +Handle(GetFavoriteSourceByIdQuery) : Task<FavoriteSource?>
      +Handle(GetFavoriteSourceByNewsApiKeyAndSourceIdQuery) : Task<FavoriteSource?>
    }
  }

  package "Infrastructure.Persistence.EFC.Repositories" {
    class FavoriteSourceRepository <<repository>> {
      +FindByNewsApiKeyAsync(string) : Task<IEnumerable<FavoriteSource>>
      +FindByNewsApiKeyAndSourceIdAsync(string, string) : Task<FavoriteSource?>
    }
  }
}

package "Shared" {

  package "Domain.Repositories" {
    interface IBaseRepository<TEntity> <<repository>> {
      +AddAsync(TEntity) : Task
      +FindByIdAsync(int) : Task<TEntity?>
      +Update(TEntity) : void
      +Remove(TEntity) : void
      +ListAsync() : Task<IEnumerable<TEntity>>
    }
    interface IUnitOfWork <<unit-of-work>> {
      +CompleteAsync() : Task
    }
  }

  package "Infrastructure.Persistence.EFC.Configuration" {
    class AppDbContext <<db-context>> {
      +OnConfiguring(DbContextOptionsBuilder) : void
      +OnModelCreating(ModelBuilder) : void
    }

    package "Extensions" {
      class ModelBuilderExtensions <<extension>> {
        +UseSnakeCaseNamingConvention(ModelBuilder) : void
      }
      class StringExtensions <<extension>> {
        +ToSnakeCase(string) : string
        +ToPlural(string) : string
      }
    }
  }

  package "Infrastructure.Persistence.EFC.Repositories" {
    class BaseRepository<TEntity> <<repository>> {
      +AddAsync(TEntity) : Task
      +FindByIdAsync(int) : Task<TEntity?>
      +Update(TEntity) : void
      +Remove(TEntity) : void
      +ListAsync() : Task<IEnumerable<TEntity>>
    }
    class UnitOfWork <<repository>> {
      +CompleteAsync() : Task
    }
  }

  package "Infrastructure.Interfaces.ASP.Configuration" {
    class KebabCaseRouteNamingConvention <<convention>> {
      +Apply(ControllerModel) : void
    }

    package "Extensions" {
      class StringExtensions <<extension>> {
        +ToKebabCase(string) : string
      }
    }
  }
}

' Relationships
FavoriteSourcesController --> IFavoriteSourceCommandService : uses
FavoriteSourcesController --> IFavoriteSourceQueryService : uses
FavoriteSourcesController --> FavoriteSourceResourceFromEntityAssembler : uses
FavoriteSourcesController --> CreateFavoriteSourceCommandFromResourceAssembler : uses

FavoriteSourceCommandService ..|> IFavoriteSourceCommandService : implements
FavoriteSourceQueryService ..|> IFavoriteSourceQueryService : implements

FavoriteSourceCommandService --> IFavoriteSourceRepository : uses
FavoriteSourceCommandService --> IUnitOfWork : uses
FavoriteSourceQueryService --> IFavoriteSourceRepository : uses

IFavoriteSourceRepository ..|> IBaseRepository : extends
FavoriteSourceRepository ..|> IFavoriteSourceRepository : implements
FavoriteSourceRepository --|> BaseRepository : extends

BaseRepository ..|> IBaseRepository : implements
UnitOfWork ..|> IUnitOfWork : implements

IFavoriteSourceRepository --> FavoriteSource : manages
FavoriteSourceResourceFromEntityAssembler ..> FavoriteSource : reads
FavoriteSourceResourceFromEntityAssembler --> FavoriteSourceResource : produces
CreateFavoriteSourceCommandFromResourceAssembler ..> CreateFavoriteSourceResource : reads
CreateFavoriteSourceCommandFromResourceAssembler --> CreateFavoriteSourceCommand : produces
CreateFavoriteSourceCommand --> FavoriteSource : constructs

AppDbContext --> FavoriteSource : maps
AppDbContext ..> ModelBuilderExtensions : uses
KebabCaseRouteNamingConvention ..> Shared.Infrastructure.Interfaces.ASP.Configuration.Extensions.StringExtensions : uses

@enduml